// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmailWidget > renders an email view widget component 1`] = `
<a
  className="metadata email widget"
  href="mailto:foo@bar.com"
  rel="noopener noreferrer"
  target={null}
  title={null}
>
  foo@bar.com
</a>
`;

exports[`EmailWidget > renders an email view widget component with children 1`] = `
<a
  className="metadata email widget"
  href="mailto:foo@bar.com"
  rel="noopener noreferrer"
  target={null}
  title={null}
>
  <strong>
    foo@bar.com
  </strong>
</a>
`;

exports[`EmailWidget > renders an empty email view widget component 1`] = `null`;
